tests/negative/gold/field_type4_test.gold
tests/negative/field_type4_test.toit:7:17: error: Type mismatch: can't assign 'null' to non-nullable 'string'
  x / string := null
                ^~~~
